data/raw_logs/lexical/lex_9.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_9.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_9.c:1:24: error: stray '#' in program
    1 | int main() { int x = 5 #; }
      |                        ^
